@@ -6,18 +6,22 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
+
 
 @Component
 @RequiredArgsConstructor
 public class JwtFilter extends OncePerRequestFilter {
 
+
     private final JwtService jwtService;
+
 
     @Override
     protected void doFilterInternal(
@@ -26,11 +30,13 @@ public class JwtFilter extends OncePerRequestFilter {
             FilterChain filterChain
     ) throws ServletException, IOException {
 
+
         String header =
                 request.getHeader("Authorization");
 
-        if (header == null
-                || !header.startsWith("Bearer ")) {
+
+        if (header == null ||
+                !header.startsWith("Bearer ")) {
 
             filterChain.doFilter(
                     request,
@@ -40,25 +46,39 @@ public class JwtFilter extends OncePerRequestFilter {
             return;
         }
 
+
         String token =
                 header.substring(7);
 
+
         if (jwtService.isValid(token)) {
+
 
             String email =
                     jwtService.extractEmail(token);
+
+
+            String role =
+                    jwtService.extractRole(token);
+
 
             UsernamePasswordAuthenticationToken auth =
                     new UsernamePasswordAuthenticationToken(
                             email,
                             null,
-                            Collections.emptyList()
+                            List.of(
+                                    new SimpleGrantedAuthority(
+                                            "ROLE_" + role
+                                    )
+                            )
                     );
+
 
             SecurityContextHolder
                     .getContext()
                     .setAuthentication(auth);
         }
+
 
         filterChain.doFilter(
                 request,
